--- a/client/card.html
+++ b/client/card.html
@@ -5,61 +5,17 @@
 <link rel="stylesheet" type="text/css" href="css/card.css" />
 </head>
 <body>
-  <div class="prey-container">
-    <div class="card prey-card">
-      <h1 class='value'>1</h1>
-    </div>
-  </div>
-  <div class="card-container">
-    <div class="card player-card">
-      <h1 class='value'>1</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>2</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>3</h1>
+  <div class="table-container">
+
+    <div class="card-container">
+
+      <div class="card vulture-card">
+        <div class="value">1</div>
+        <div class="image">🦅</div>
       </div>
-    <div class="card player-card">
-      <h1 class='value'>4</h1>
-      </div>
-    <div class="card player-card">
-      <h1 class='value'>5</h1>
-      </div>
-    <div class="card player-card">
-      <h1 class='value'>6</h1>
+
     </div>
-    <div class="card player-card">
-      <h1 class='value'>7</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>8</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>9</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>10</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>11</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>12</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>13</h1>
-    </div>
-    <div class="card player-card">
-      <h1 class='value'>14</h1>
-    </div>
-    <div class="card">
-      <h1 class='value'>15</h1>
-    </div>
-    <div class="player-name">
-      <h2>Player: Momo</h2>
-      <h2>Score: 0</h2>
-    </div>
+
   </div>
 </body>
 </html>
