add more card style

--- a/client/card.html
+++ b/client/card.html
@@ -7,13 +7,25 @@
 <body>
   <div class="table-container">
 
-    <div class="card-container">
+    <div class="prey-container ">
+      <div class="card prey-card">
+        <div class="value">5</div>
+        <div class="image">🐁</div>
+      </div>
+      <div class="card prey-card sec">
+        <div class="value">-1</div>
+        <div class="image">💀</div>
+      </div>
+    </div>
 
+    <div class="card-container">
       <div class="card vulture-card">
         <div class="value">1</div>
         <div class="image">🦅</div>
       </div>
-
+      <div class="card vulture-card-back">
+        <div class="image">🐣</div>
+      </div>
     </div>
 
   </div>
