Style the layout

--- a/client/card.html
+++ b/client/card.html
@@ -7,25 +7,103 @@
 <body>
   <div class="table-container">
 
-    <div class="prey-container ">
-      <div class="card prey-card">
-        <div class="value">5</div>
-        <div class="image">🐁</div>
-      </div>
-      <div class="card prey-card sec">
-        <div class="value">-1</div>
-        <div class="image">💀</div>
-      </div>
-    </div>
-
     <div class="card-container">
       <div class="card vulture-card">
         <div class="value">1</div>
         <div class="image">🦅</div>
       </div>
-      <div class="card vulture-card-back">
-        <div class="image">🐣</div>
+      <div class="card vulture-card">
+        <div class="value">2</div>
+        <div class="image">🦅</div>
       </div>
+      <div class="card vulture-card">
+        <div class="value">3</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">4</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">5</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">6</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">7</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">8</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">9</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">10</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">11</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">12</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">13</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">14</div>
+        <div class="image">🦅</div>
+      </div>
+      <div class="card vulture-card">
+        <div class="value">15</div>
+        <div class="image">🦅</div>
+      </div>
+    </div>
+
+    <div class="prey-container ">
+      <div class="card prey-card">
+        <div class="value">5</div>
+        <div class="image">🐁</div>
+      </div>
+    </div>
+
+
+    <div class="players-info">
+      <div class="box">
+        <h2 class="name">Name1</h1>
+        <div class="card-spot card"></div>
+        <h2 class="score">Score: 00</h2>
+      </div>
+
+      <div class="box">
+        <h2 class="name">Name2</h1>
+        <div class="card-spot-full card"></div>
+        <h2 class="score">Score: 10</h2>
+      </div>
+
+      <div class="box">
+        <h2 class="name">Name3</h1>
+        <div class="card-spot card"></div>
+        <h2 class="score">Score: 00</h2>
+      </div>
+
+      <div class="box">
+        <h2 class="name">Name4</h1>
+        <div class="card-spot card"></div>
+        <h2 class="score">Score: 12</h2>
+      </div>
+    </div>
+
     </div>
 
   </div>
